unpackaged/main/default/objects/Housing_Preference__c/Housing_Preference__c.object-meta.xml
<CustomObject>
    <description>Tracks student housing preferences captured in a form</description>
    <label>Housing Preference</label>
    <nameField>
        <displayFormat>HP-{000000}</displayFormat>
        <label>Housing Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Housing Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>