unpackaged/main/default/objects/Housing_Preference__c/fields/Enrollment_Record__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Record__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Enrollment Record</label>
    <referenceTo>Enrollment_Record__c</referenceTo>
    <relationshipLabel>Housing Preferences</relationshipLabel>
    <relationshipName>Housing_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>