unpackaged/main/default/objects/Housing_Preference__c/fields/Faithful_and_Conservative_Values__c.field-meta.xml
<CustomField>
    <fullName>Faithful_and_Conservative_Values__c</fullName>
    <label>Faithful and Conservative Values</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I pray daily, attend worship services weekly, and prefer a roommate with similar devout practices.</fullName>
            </value>
            <value>
                <fullName>No, I do not have a faith and prefer not to live with a person who actively practices a religion.</fullName>
            </value>
            <value>
                <fullName>No preference, I am flexible about belief systems---to each their own.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>