unpackaged/main/default/objects/Housing_Preference__c/fields/Gender_Identity__c.field-meta.xml
<CustomField>
    <fullName>Gender_Identity__c</fullName>
    <label>Gender Identity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Transgender Female</fullName>
            </value>
            <value>
                <fullName>Transgender Male</fullName>
            </value>
            <value>
                <fullName>Gender Variant/Non-Conforming</fullName>
            </value>
            <value>
                <fullName>Not Listed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>