unpackaged/main/default/objects/Housing_Preference__c/fields/Housing_Preference_2__c.field-meta.xml
<CustomField>
    <fullName>Housing_Preference_2__c</fullName>
    <description>Any student going to Spain should require a student to list the order of their housing preferences</description>
    <label>Housing Preference 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homestay</fullName>
            </value>
            <value>
                <fullName>Residencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>