unpackaged/main/default/objects/Housing_Preference__c/fields/I_feel_comfortable_living_with__c.field-meta.xml
<CustomField>
    <fullName>I_feel_comfortable_living_with__c</fullName>
    <label>I feel comfortable living with</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single host (man)</fullName>
            </value>
            <value>
                <fullName>Single host (woman)</fullName>
            </value>
            <value>
                <fullName>Family with young children (children aged 0-26) (1 or 2 parent households)</fullName>
            </value>
            <value>
                <fullName>Family with older children (children aged 27+)(1 or 2 parent households)</fullName>
            </value>
            <value>
                <fullName>Family without children living at home</fullName>
            </value>
            <value>
                <fullName>LGBTQ+ couple</fullName>
            </value>
            <value>
                <fullName>LGBTQ+ family with children</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>