unpackaged/main/default/objects/Housing_Preference__c/fields/LGBTQ_Roommate__c.field-meta.xml
<CustomField>
    <fullName>LGBTQ_Roommate__c</fullName>
    <label>LGBTQ Roommate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I would feel very comfortable living with someone who identifies as LGBTQ+.</fullName>
            </value>
            <value>
                <fullName>No, I would not feel very comfortable living with someone who identifies as LGBTQ+.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>