unpackaged/main/default/objects/Housing_Preference__c/fields/Neat_and_Tidy__c.field-meta.xml
<CustomField>
    <fullName>Neat_and_Tidy__c</fullName>
    <label>Neat and Tidy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I like to have clothes put away and messes cleaned up each day. Dirty dishes, laundry piles, or clutter may bother me if not taken care right away.</fullName>
            </value>
            <value>
                <fullName>No, a messy room may not bother me. I may put away clothes, clean dirty dishes, or take out trash when I have time. I may not notice right away that my room has become cluttered.</fullName>
            </value>
            <value>
                <fullName>No Preference.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>