unpackaged/main/default/objects/Housing_Preference__c/fields/Non_Binary_Roommate__c.field-meta.xml
<CustomField>
    <fullName>Non_Binary_Roommate__c</fullName>
    <label>Non-Binary Roommate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I would feel comfortable and willing to live with a trans or non‐binary person.</fullName>
            </value>
            <value>
                <fullName>No, I would not feel comfortable living with a trans or non‐binary person.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>