unpackaged/main/default/objects/Housing_Preference__c/fields/Pet_allergies__c.field-meta.xml
<CustomField>
    <fullName>Pet_allergies__c</fullName>
    <label>Pet allergies?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>