unpackaged/main/default/objects/Housing_Preference__c/fields/Pet_allergies_explain__c.field-meta.xml
<CustomField>
    <fullName>Pet_allergies_explain__c</fullName>
    <label>Pet allergies (explain)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>