unpackaged/main/default/objects/Housing_Preference__c/fields/Pet_Preference__c.field-meta.xml
<CustomField>
    <fullName>Pet_Preference__c</fullName>
    <label>Pet Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dogs</fullName>
            </value>
            <value>
                <fullName>Cats</fullName>
            </value>
            <value>
                <fullName>Birds</fullName>
            </value>
            <value>
                <fullName>Rabbits</fullName>
            </value>
            <value>
                <fullName>Reptiles</fullName>
            </value>
            <value>
                <fullName>Rodents</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>