unpackaged/main/default/objects/Housing_Preference__c/fields/Prefer_Limited_Distractions__c.field-meta.xml
<CustomField>
    <fullName>Prefer_Limited_Distractions__c</fullName>
    <label>Prefer Limited Distractions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I typically prefer to study primarily in my room with limited distractions in a quiet atmosphere.</fullName>
            </value>
            <value>
                <fullName>No, I am not distracted by visitors or music when studying in my room.</fullName>
            </value>
            <value>
                <fullName>No preference, I will likely find a space to study outside of my room if I am being disturbed by others.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>