unpackaged/main/default/objects/Housing_Preference__c/fields/Quiet_Person__c.field-meta.xml
<CustomField>
    <fullName>Quiet_Person__c</fullName>
    <label>Quiet Person?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I would like a roommate who prefers a quiet environment with fewer people hanging around.</fullName>
            </value>
            <value>
                <fullName>No, I like to have people over, share my space, and play music without headphones/earbuds.</fullName>
            </value>
            <value>
                <fullName>No Preference.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>