unpackaged/main/default/objects/Housing_Preference__c/fields/Roommate_Stays_Up_Late__c.field-meta.xml
<CustomField>
    <fullName>Roommate_Stays_Up_Late__c</fullName>
    <label>Roommate Stays Up Late</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I typically stay up until after 11:00pm and/or am comfortable living with someone who does.</fullName>
            </value>
            <value>
                <fullName>No, I go to bed before 11:00pm and prefer to live with someone who also goes to bed before 11:00pm.</fullName>
            </value>
            <value>
                <fullName>No preference.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>