unpackaged/main/default/objects/Housing_Preference__c/fields/Roommate_Wakes_Early__c.field-meta.xml
<CustomField>
    <fullName>Roommate_Wakes_Early__c</fullName>
    <label>Roommate Wakes Early</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I get up early (before 8am) and/or am comfortable living with someone who does.</fullName>
            </value>
            <value>
                <fullName>No, I don’t get up early and prefer to live with someone who doesn’t get up early.</fullName>
            </value>
            <value>
                <fullName>No Preference.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>