unpackaged/main/default/objects/Housing_Preference__c/fields/Smoker_Preference__c.field-meta.xml
<CustomField>
    <fullName>Smoker_Preference__c</fullName>
    <label>Smoker Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Smokers</fullName>
            </value>
            <value>
                <fullName>Smokers who smoke at home</fullName>
            </value>
            <value>
                <fullName>Smokers who smoke outside (balcony, terrace, street)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>