unpackaged/main/default/objects/Housing_Preference__c/fields/Special_dietary_requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_dietary_requirements__c</fullName>
    <label>Special dietary requirements?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>