unpackaged/main/default/objects/Housing_Preference__c/fields/Special_dietary_requirements_explain__c.field-meta.xml
<CustomField>
    <fullName>Special_dietary_requirements_explain__c</fullName>
    <label>Special dietary requirements (explain)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>