unpackaged/main/default/objects/Housing_Preference__c/fields/What_religion_do_you_practice__c.field-meta.xml
<CustomField>
    <fullName>What_religion_do_you_practice__c</fullName>
    <label>What religion do you practice?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>