unpackaged/main/default/objects/Housing_Preference__c/listViews/Housing_Preference.listView-meta.xml
<ListView>
    <fullName>Housing_Preference</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Enrollment_Record__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Housing Preference</label>
</ListView>